# wallhaven

./: LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg
wallhaven/: __init__.py  api.py  client.py  config.py  endpoints.py  errors.py  exceptions.py  session.py  utils.py
wallhaven/api/: __init__.py  endpoints.py  wallhaven.py
wallhaven/cli/: cli.py  main.py
wallhaven/cli/commands/: __init__.py  config.py  search.py  wallpaper.py
wallhaven/config/: __init__.py  main.py  settings.py
wallhaven/models/: __init__.py  api.py  base.py  collection.py  listing.py  meta.py  settings.py  tag.py  uploader.py  wallpaper.py
wallhaven/search/: __init__.py  base.py  categories.py  colors.py  enums.py  params.py  purity.py  query.py
