[tool.poetry]
name = "wallhaven"
version = "0.1.0"
description = "A Python library and CLI for interacting with the Wallhaven API."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasshiva/wallhaven"
repository = "https://github.com/lucasshiva/wallhaven"
keywords = ["wallhaven", "wallpaper", "python", "api", "cli", "click"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
click = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"
flake8-docstrings = "^1.6.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
