[tool.poetry]
name = "wallhaven"
version = "0.1.0"
description = "Download wallpapers directly from your terminal!"
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lucasshiva/wallhaven"
repository = "https://github.com/lucasshiva/wallhaven"
keywords = ["wallhaven", "wallpaper", "python", "python3", "api", "cli", "click", "httpx"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.0"
click = "^8.1.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"

[tool.poetry.scripts]
wallhaven = "wallhaven.cli.cli:cli"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
# TLDR: Strict by default and loose when needed
[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
